deploy/sandbox/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ocp-virt-migration-agent
  labels:
    app: ocp-virt-migration-agent
    app.kubernetes.io/part-of: ocp-virt-migration-agent
  annotations:
    haproxy.router.openshift.io/timeout: 600s
    haproxy.router.openshift.io/hsts_header: max-age=31536000;includeSubDomains
spec:
  to:
    kind: Service
    name: ocp-virt-migration-agent
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
